[gd_scene load_steps=5 format=2]

[ext_resource path="res://Asset/Spawner/Enemy/Popcat/PopCat.gd" type="Script" id=1]
[ext_resource path="res://Asset/Spawner/Bullet/Bubble/Bubble.tscn" type="PackedScene" id=2]
[ext_resource path="res://Asset/Spawner/Enemy/Popcat/PopCat.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Asset/Spawner/Enemy/Popcat/sprite/ufo.png" type="Texture" id=4]

[node name="PopCat" type="Area2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )
bubble = ExtResource( 2 )

[node name="UFO" type="Sprite" parent="."]
position = Vector2( 4, -14 )
scale = Vector2( 0.4, 0.5 )
texture = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=["Enemy"]]
position = Vector2( 0, -50.9 )
scale = Vector2( 0.4, 0.4 )
frames = ExtResource( 3 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." groups=["Enemy"]]
position = Vector2( 0, -50.9 )
polygon = PoolVector2Array( -19, -36, -6, -25, 11, -25, 23, -31, 34, -29, 22, 15, 28, 36, 33, 42, 37, 51, -27, 51, -24, 21, -30, 4, -24, -9 )

[node name="DeathTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( -32, -60 )

[connection signal="body_entered" from="." to="." method="_on_PopCat_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
